--- a/py_lab_practice.ipynb
+++ b/py_lab_practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPO5RRoI3ik/z/uYqAUEvqf",
+      "authorship_tag": "ABX9TyOy/UQPUbPRHJNfLEQpfuyR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -110,7 +110,7 @@
         "id": "bUzSyfxXM9kh",
         "outputId": "80ec60a5-34c5-4685-eedf-c35fc3559fc0"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,7 +142,7 @@
         "id": "IbbUFVVONFSw",
         "outputId": "6b2b2513-738f-4fb1-d597-15dcb3144a3e"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,7 +178,7 @@
         "id": "jqL1FeraNyng",
         "outputId": "30fe3766-690c-438d-9720-d68786d01080"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -226,7 +226,7 @@
         "id": "1btW_o2GRLEO",
         "outputId": "4e02edfd-91cd-47cb-8f72-9cd98cf3de15"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +262,7 @@
         "id": "ZALcNfW-VRUW",
         "outputId": "d1d7a487-4e25-4e82-fca3-76e6d0e04942"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,7 +294,7 @@
         "id": "Ddof_FnCcGgo",
         "outputId": "6835b275-1fd9-4a4c-880b-b553c0bfd44e"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -336,7 +336,7 @@
         "id": "xlKIOSqrprL-",
         "outputId": "5b873d1b-ffa0-4ce3-b337-24d0669d0e59"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -368,7 +368,7 @@
         "id": "mrT9RDg0qEMZ",
         "outputId": "a238cda6-c4a4-4f01-f345-4ef47f17ff1b"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -409,7 +409,7 @@
         "id": "YZowtOSVlykg",
         "outputId": "57e66252-49a2-40d3-a8f5-a80eba5aa3c0"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -439,7 +439,7 @@
         "id": "DylZxr0CmZ64",
         "outputId": "a31ee8fa-2a51-4054-fa79-60fe73642ce1"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -478,7 +478,7 @@
         "id": "Fm3bJJsdn-AW",
         "outputId": "079e67c8-b898-4805-f568-1ffa3e7c5bf5"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -507,7 +507,7 @@
         "id": "LpCv0CF5o01G",
         "outputId": "aa123223-6ee4-4636-cd0d-14967062ffee"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -546,7 +546,7 @@
         "id": "294u9ND7pXON",
         "outputId": "bceb3309-5531-41d8-bd4a-bd7c835ed353"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -588,7 +588,7 @@
         "id": "oHMX0RW5rLiN",
         "outputId": "685c52a9-0601-4563-c771-bf7227e9d8b6"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -623,7 +623,7 @@
         "id": "ZiV2uFSkrRtE",
         "outputId": "b339b9c3-be90-4ef6-87bf-140cbfb97376"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -636,10 +636,480 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Exercise 9"
+      ],
+      "metadata": {
+        "id": "MjP0m4ojhXz6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Simple Calculator program using functions\n",
+        "def add(num1, num2):\n",
+        "    return num1 + num2\n",
+        "\n",
+        "def subtract(num1, num2):\n",
+        "    return num1 - num2\n",
+        "\n",
+        "def multiply(num1, num2):\n",
+        "    return num1 * num2\n",
+        "\n",
+        "def divide(num1, num2):\n",
+        "    return num1 / num2\n",
+        "\n",
+        "num1 = int(input(\"Enter first number: \"))\n",
+        "num2 = int(input(\"Enter second number: \"))\n",
+        "\n",
+        "print(\"\\nSelect operation:\")\n",
+        "print(\"1. Add\")\n",
+        "print(\"2. Subtract\")\n",
+        "print(\"3. Multiply\")\n",
+        "print(\"4. Divide\")\n",
+        "\n",
+        "choice = int(input(\"Enter choice: \"))\n",
+        "\n",
+        "if choice == 1:\n",
+        "    print(\"\\nResult:\", add(num1, num2))\n",
+        "elif choice == 2:\n",
+        "    print(\"\\nResult:\", subtract(num1, num2))\n",
+        "elif choice == 3:\n",
+        "    print(\"\\nResult:\", multiply(num1, num2))\n",
+        "elif choice == 4:\n",
+        "    print(\"\\nResult:\", divide(num1, num2))\n",
+        "else:\n",
+        "    print(\"\\nInvalid input\")\n"
+      ],
+      "metadata": {
+        "id": "mxZ7sfJKrZfd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "102ebed1-ca99-43ee-e4bd-a5b4a2836760"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter first number: 13\n",
+            "Enter second number: 15\n",
+            "\n",
+            "Select operation:\n",
+            "1. Add\n",
+            "2. Subtract\n",
+            "3. Multiply\n",
+            "4. Divide\n",
+            "Enter choice: 3\n",
+            "\n",
+            "Result: 195\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Finding the factorial of a number using recursion\n",
+        "def factorial(num):\n",
+        "    if num == 1:\n",
+        "        return 1\n",
+        "    else:\n",
+        "        return num * factorial(num - 1)\n",
+        "\n",
+        "num = int(input(\"Enter a number: \"))\n",
+        "print(\"Factorial:\", factorial(num))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NF5Mn4zbhmmV",
+        "outputId": "dcd45d14-7733-432c-8498-69a5dcd0ea61"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 11\n",
+            "Factorial: 39916800\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Finding all duplicates in a list using a function\n",
+        "def dups(list):\n",
+        "    duplicates = []\n",
+        "    for i in range(len(list)):\n",
+        "        for j in range(i + 1, len(list)):\n",
+        "            if list[i] == list[j]:\n",
+        "                duplicates.append(list[i])\n",
+        "                break\n",
+        "    return duplicates\n",
+        "\n",
+        "list = [int(x) for x in input(\"Enter elements separated by space: \").split()]\n",
+        "print(\"Duplicates:\", dups(list))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W8dWMz0-hppR",
+        "outputId": "bdd5a055-5983-4db3-eb46-9fa378bc0422"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter elements separated by space: 1 3 2 4 1 1 2 8 9 2\n",
+            "Duplicates: [1, 2, 1, 2]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Finding all the unique elements in a list using a function\n",
+        "def unique(list):\n",
+        "    unique_list = []\n",
+        "    for i in list:\n",
+        "        if i not in unique_list:\n",
+        "            unique_list.append(i)\n",
+        "    return unique_list\n",
+        "\n",
+        "list = [int(x) for x in input(\"Enter elements separated by space: \").split()]\n",
+        "print(\"Unique elements:\", unique(list))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cb9BXCkAhvY9",
+        "outputId": "5df8a8a5-bd16-4229-c806-a5b17c11189e"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter elements separated by space: 1 2 3 4 4 5 6 1 2 9 8 2 4\n",
+            "Unique elements: [1, 2, 3, 4, 5, 6, 9, 8]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Exercise 10"
+      ],
+      "metadata": {
+        "id": "N0abWP4jiEt1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def cumulative_product(numbers):\n",
+        "  cumulative_product = 1\n",
+        "  for num in numbers:\n",
+        "    cumulative_product *= num\n",
+        "  return cumulative_product\n",
+        "\n",
+        "print(cumulative_product([1, 2, 3, 4, 5]))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S2gBETU0h176",
+        "outputId": "c3f401be-7a3d-4ad0-db4b-3f2ba0f9b1db"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "120\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Reverse List\n",
+        "def reverse(numbers):\n",
+        "  return numbers[::-1]\n",
+        "\n",
+        "print(reverse([1, 2, 3, 4, 5]))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nMMYJqBsiKu5",
+        "outputId": "a7e7165d-f7be-4c15-e0d1-8fdecc4ecbb3"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[5, 4, 3, 2, 1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#gcd and lcm\n",
+        "import math\n",
+        "\n",
+        "def gcd(a, b):\n",
+        "  return math.gcd(a, b)\n",
+        "\n",
+        "def lcm(a, b):\n",
+        "  return a * b // gcd(a, b)\n",
+        "\n",
+        "print(gcd(12, 16))\n",
+        "print(lcm(12, 16))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ImqNcjZLiQEW",
+        "outputId": "16a54486-71f9-434a-dd55-a5784bb6ea12"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "48\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Exercise 11"
+      ],
+      "metadata": {
+        "id": "aXndJ_NxiiVh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Define and Print Matrix\n",
+        "def print_matrix(matrix):\n",
+        "  for row in matrix:\n",
+        "    print(*row)\n",
+        "\n",
+        "matrix = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+        "print_matrix(matrix)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-dOGv1fDiWfQ",
+        "outputId": "199a3659-2b1c-4be8-a5ae-171d94267a24"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 2 3\n",
+            "4 5 6\n",
+            "7 8 9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#add 2 matrices\n",
+        "def add_matrices(matrix1, matrix2):\n",
+        "  result = []\n",
+        "  for i in range(len(matrix1)):\n",
+        "    row = []\n",
+        "    for j in range(len(matrix1[0])):\n",
+        "      row.append(matrix1[i][j] + matrix2[i][j])\n",
+        "    result.append(row)\n",
+        "  return result\n",
+        "\n",
+        "matrix1 = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+        "matrix2 = [[9, 8, 7], [6, 5, 4], [3, 2, 1]]\n",
+        "print_matrix(add_matrices(matrix1, matrix2))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LhdnadDXiwpZ",
+        "outputId": "32c004af-9294-4407-bfdf-45638cf0b920"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10 10 10\n",
+            "10 10 10\n",
+            "10 10 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Multiplication of Two Square Matrices\n",
+        "def multiply_matrices(matrix1, matrix2):\n",
+        "  result = []\n",
+        "  for i in range(len(matrix1)):\n",
+        "    row = []\n",
+        "    for j in range(len(matrix2[0])):\n",
+        "      row.append(sum(matrix1[i][k] * matrix2[k][j] for k in range(len(matrix2))))\n",
+        "    result.append(row)\n",
+        "  return result\n",
+        "\n",
+        "matrix1 = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+        "matrix2 = [[9, 8, 7], [6, 5, 4], [3, 2, 1]]\n",
+        "print_matrix(multiply_matrices(matrix1, matrix2))"
+      ],
+      "metadata": {
+        "id": "37HZ43_yiz5p"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Exercise 13\n"
+      ],
+      "metadata": {
+        "id": "o4GKV87YjHNA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#AND, OR, NOT, EX-OR Gates\n",
+        "def and_gate(a, b):\n",
+        "  return a and b\n",
+        "\n",
+        "def or_gate(a, b):\n",
+        "  return a or b\n",
+        "\n",
+        "def not_gate(a):\n",
+        "  return not a\n",
+        "\n",
+        "def xor_gate(a, b):\n",
+        "  return (a and not b) or (not a and b)\n",
+        "\n",
+        "print(and_gate(True, True))\n",
+        "print(or_gate(True, False))\n",
+        "print(not_gate(True))\n",
+        "print(xor_gate(True, False))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gRC_1SOMjJU0",
+        "outputId": "a5f7f8c1-7ff5-45ec-e430-aca9040bfeb4"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "True\n",
+            "False\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Half Adder, Full Adder, and Parallel Adder\n",
+        "def half_adder(a, b):\n",
+        "  sum = xor_gate(a, b)\n",
+        "  carry = and_gate(a, b)\n",
+        "  return sum, carry\n",
+        "\n",
+        "def full_adder(a, b, c_in):\n",
+        "  sum1, carry1 = half_adder(a, b)\n",
+        "  sum2, carry2 = half_adder(sum1, c_in)\n",
+        "  return sum2, carry1 or carry2\n",
+        "\n",
+        "def parallel_adder(a, b, c_in):\n",
+        "  carries = []\n",
+        "  for i in range(len(a)):\n",
+        "    sum, carry = full_adder(a[i], b[i], c_in)\n",
+        "    carries.append(carry)\n",
+        "    c_in = carry\n",
+        "  return carries\n",
+        "\n",
+        "a = [1, 0, 1, 1]\n",
+        "b = [0, 1, 0, 0]\n",
+        "c_in = 0\n",
+        "print(parallel_adder(a, b, c_in))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1DBJIapljNtT",
+        "outputId": "69169e6b-c345-4657-c4fc-ac0e2848930e"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 0, 0, 0]\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "mxZ7sfJKrZfd"
+        "id": "IN7yXJIajSAj"
       },
       "execution_count": null,
       "outputs": []
